# ama-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.py  package-lock.json  pyproject.toml
deploy/: RUNBOOK.md  rag-api.service
docs/: Action_Items.md  Content_Regeneration_Runbook.md  L1_Ingestion.md  L2_Query_Pipeline.md  L3_Presentation.md  Project_Working_Charter.md  RAG_System_Architecture.md
docs/screenshots/: README.md
ingest/: __init__.py  chunker.py  embed_store.py  notion_fetch.py  sync.py
query/: __init__.py  api.py  calibrate.py  cli.py  eval_set.py  gate.py  generate.py  pipeline.py  prompt.py  retrieval.py
scripts/: create_index.py  lock_embedding.py  run_ingest.sh
tests/: test_api.py  test_calibrate.py  test_chunker.py  test_embed_store.py  test_gate.py  test_generate.py  test_imports.py  test_notion_fetch.py  test_pipeline.py  test_prompt.py  test_retrieval.py  test_sync.py
web/: .env.example  README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: AskWidget.module.css  AskWidget.tsx  SourceCards.module.css  SourceCards.tsx
web/lib/: announce.test.ts  reducer.test.ts  sources.test.ts  sse.test.ts
